--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "sqlalchemy[async] (>=2.0.43,<3.0.0)",
     "dotenv (>=0.9.9,<0.10.0)",
     "alembic (>=1.16.4,<2.0.0)",
-    "asyncpg (>=0.30.0,<0.31.0)"
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "deep-translator (>=1.11.4,<2.0.0)"
 ]
 
 
