--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "dotenv (>=0.9.9,<0.10.0)",
     "alembic (>=1.16.4,<2.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
-    "deep-translator (>=1.11.4,<2.0.0)"
+    "deep-translator (>=1.11.4,<2.0.0)",
+    "anyio (>=4.10.0,<5.0.0)"
 ]
 
 
