--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,6 @@ dependencies = [
     "alembic (>=1.16.4,<2.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
     "deep-translator (>=1.11.4,<2.0.0)",
-    "anyio (>=4.10.0,<5.0.0)"
 ]
 
 
@@ -31,3 +30,4 @@ build-backend = "poetry.core.masonry.api"
 pytest = "^8.4.2"
 pytest-asyncio = "^1.2.0"
 pytest-cov = "^7.0.0"
+anyio = "^4.10.0"
