--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,26 +8,31 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12, <4.0"
 dependencies = [
-    "fastapi (>=0.116.1,<0.117.0)",
-    "uvicorn (>=0.35.0,<0.36.0)",
+    "fastapi (>=0.119.0,<0.120.0)",
+    "uvicorn (>=0.37.0,<0.38.0)",
+    "orjson (>=3.11.3,<4.0.0)",
+    "redis (>=6.4.0,<7.0.0)",
+    "fastapi (>=0.119.0,<0.120.0)",
+    "uvicorn (>=0.37.0,<0.38.0)",
     "orjson (>=3.11.3,<4.0.0)",
     "redis[async] (>=6.4.0,<7.0.0)",
     "taskiq (>=0.11.18,<0.12.0)",
-    "taskiq-redis (>=1.1.0,<2.0.0)",
-    "sqlalchemy[async] (>=2.0.43,<3.0.0)",
+    "taskiq-redis (>=1.1.2,<2.0.0)",
+    "sqlalchemy[async] (>=2.0.44,<3.0.0)",
     "dotenv (>=0.9.9,<0.10.0)",
-    "alembic (>=1.16.4,<2.0.0)",
+    "alembic (>=1.17.0,<2.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
-    "deep-translator (>=1.11.4,<2.0.0)",
+    "deep-translator[async] (>=1.11.4,<2.0.0)",
+    "taskiq (>=0.11.18,<0.12.0)",
+    "taskiq-redis (>=1.1.2,<2.0.0)",
+    "sqlalchemy[async] (>=2.0.44,<3.0.0)",
+    "dotenv (>=0.9.9,<0.10.0)",
+    "alembic (>=1.17.0,<2.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "deep-translator (>=1.11.4,<2.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.4.2"
-pytest-asyncio = "^1.2.0"
-pytest-cov = "^7.0.0"
-anyio = "^4.10.0"
