--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
     "dotenv (>=0.9.9,<0.10.0)",
     "alembic (>=1.17.0,<2.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
-    "deep-translator (>=1.11.4,<2.0.0)"
+    "deep-translator (>=1.11.4,<2.0.0)",
 ]
 
 
@@ -42,5 +42,6 @@ dev = [
     "pytest (>=8.4.2,<9.0.0)",
     "pytest-asyncio (>=1.2.0,<2.0.0)",
     "pytest-cov (>=7.0.0,<8.0.0)",
-    "anyio (>=4.11.0,<5.0.0)"
+    "anyio (>=4.11.0,<5.0.0)",
+    "fakeredis (>=2.32.0,<3.0.0)"
 ]
